--- a/packages/angular-material/package.json
+++ b/packages/angular-material/package.json
@@ -10,8 +10,7 @@
     "access": "public"
   },
   "directories": {
-    "src": "src",
-    "test": "test"
+    "src": "src"
   },
   "keywords": [
     "angular",
@@ -87,8 +86,6 @@
     "@angular/router": "^9.0.0",
     "@jsonforms/angular": "git+https://github.com/varund29/jsonforms-angular.git",
     "@jsonforms/core": "git+https://github.com/varund29/jsonforms-core.git",
-    "@jsonforms/angular-test": "^3.0.0-alpha.0",
-    "@jsonforms/examples": "^3.0.0-alpha.0",
     "@types/node": "^10.10.0",
     "@types/redux-logger": "3.0.6",
     "angular2-template-loader": "^0.6.2",
